--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-"name": "PRABATH-MD",
+"name": "©𝚀𝚄𝙴𝙴𝙽 𝚉𝙾𝚈𝙰 𝙼𝚄𝙻𝚃𝙸𝙳𝙴𝚅𝙸𝙲𝙴",
 "version": "2.1.2",
-"description": "PRABATH-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
+"description": "©𝚀𝚄𝙴𝙴𝙽 𝚉𝙾𝚈𝙰 𝙼𝚄𝙻𝚃𝙸𝙳𝙴𝚅𝙸𝙲𝙴",
 "main": "start.js",
 "scripts": {
 "start": "pm2 start start.js --deep-monitoring --attach --name prabath-md",
